<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.MainActivity">
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".05"/>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/open_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />


    <com.google.android.material.button.MaterialButton
            android:id="@+id/open_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gallery"
            app:cornerRadius="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/googleg_standard_color_18"
            android:layout_width="195dp"
            android:layout_height="150dp"
            android:id="@+id/imageViewUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"
    />
    <EditText android:id="@+id/nameInput"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:hint="@string/name"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_margin="10dp"
              app:layout_constraintTop_toBottomOf="@+id/imageViewUser"
              android:layout_marginTop="36dp"
              android:layout_marginStart="8dp"
              android:drawablePadding="16dp"
              android:ems="10"
              android:maxLength="40"
              android:padding="16dp"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:maxLength="40"
            android:padding="16dp"/>

    <EditText android:id="@+id/phoneInput"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/phone"
              android:inputType="phone"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/emailInput"
              android:layout_marginStart="10dp"
              android:ems="10"
              android:maxLength="40"
              android:padding="16dp"/>

    <EditText android:id="@+id/homeInput"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/home"
              android:inputType="textPersonName"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="10dp"
              app:layout_constraintTop_toBottomOf="@+id/phoneInput"
              android:ems="10"
              android:maxLength="40"
              android:padding="16dp"/>

    <Button android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_margin="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/homeInput"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton"
            android:layout_marginTop="68dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>